--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
-  "name": "cloud",
+  "name": "node-api-render",
   "version": "1.0.0",
-  "description": "",
+  "description": "Node.js REST API with Express",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.18.2"
   }
 }
